--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,9 @@
                 android:value="org.ateam.carcontrol.MainActivity" />
         </activity>
         <activity android:name=".RcControl" />
+        <activity android:name=".ConvoyActivity" />
+        <activity android:name=".InConvoyActivity" />
+        <activity android:name=".JoinConvoyActivity"></activity>
     </application>
 
 </manifest>
